- Fix: [#13937] Pathfinding gets confused when two entrances/exits from the same ride are on top of each other.
- Fix: [#13961] Animation for Guests sliding down Spiral Slide is missing on close zoom levels.
- Fix: [#14012] 'Finish 5 roller coasters' goal is listed incorrectly in scenario selector.
- Fix: [#14095] Holding down [-][+] buttons does not decrease/increase number of circuits.
- Fix: [#14247] Scenarios from RCT1 allow hiring too many staff.
- Improved: [#6022] Allow up to 128 ride objects to be selected in track designer.
- Improved: [#12917] Changed peep movement so that they stay more spread out over the full width of single tile paths.
- Improved: [#13386] A GUI error message is now displayed if the language files are missing.
- Improved: [#14193] [Plugin] Add TileElement union type and use it in Tile interface instead of BaseTileElement.
- Improved: [#14193] [Plugin] Add exact type field to each TileElement, add type field to WidgetBase.
- Improved: [#14193] [Plugin] Change single quotes to double quotes in openrct2.d.ts.
- Removed: [#13423] Built-in explode guests cheat (replaced by plug-in).
- Removed: [#14186] Network traffic window (replaced by plug-in).

0.3.2 (2020-11-01)
------------------------------------------------------------------------
- Feature: [#12110] Add Hybrid Coaster (Rocky Mountain Construction I-Box) track type.
- Feature: [#12999] .sea (RCT Classic) scenarios are now listed in the “New Scenario” dialog.
- Feature: [#13000] objective_options command for console.
- Feature: [#13096] Add Esperanto translation.
- Feature: [#13164] Add 'Objective options' to Cheats menu.
- Change: [#9568] Change lift sounds of Reverser Roller Coaster and Compact Inverted Coaster to better fitting ones.
- Change: [#13160] The lay-out of the Park Cheats tab has been improved.
- Fix: [#1324] Last track piece map selection still visible when placing ride entrance or exit (original bug).